navegando entre páginas con url, ha sido necesario crear un módulo para la página de home

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -14,7 +14,11 @@
 
 
 <ion-content padding>
+
   <button ion-button (click)="goBack()" >
     Go Back
+  </button>
+  <button ion-button (click)="navigateBack()" >
+    Navigate Back
   </button>
 </ion-content>
