--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,4 +10,7 @@
   <button ion-button (click)="goAbout()" >
     Go About Page
   </button>
+  <button ion-button (click)="navigateAbout()" >
+    Navigate About Page
+  </button>
 </ion-content>
