manejo de listados paso de parámetros entre páginas y recogida de parámetros y modificación de url

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,4 +13,7 @@
   <button ion-button (click)="navigateAbout()" >
     Navigate About Page
   </button>
+  <button ion-button (click)="navigateListado()" >
+    Navigate Listado Page
+  </button>
 </ion-content>
