gestionando modales incluido el paso de parámetros entre ellas

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,4 +16,7 @@
   <button ion-button (click)="navigateListado()" >
     Navigate Listado Page
   </button>
+  <button ion-button (click)="presentModal()" >
+    Present Modal
+  </button>
 </ion-content>
