petición get para coger datos de usuarios y mostrarlos en pantalla

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,4 +19,7 @@
   <button ion-button (click)="presentModal()" >
     Present Modal
   </button>
+  <button ion-button (click)="navigateInfinite()" >
+    Navegate Infinite
+  </button>
 </ion-content>
