--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,4 +22,7 @@
   <button ion-button (click)="navigateInfinite()" >
     Navegate Infinite
   </button>
+  <button ion-button (click)="navigateForm()" >
+    Navegate Form
+  </button>
 </ion-content>
