manejo de action sheet

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -25,4 +25,7 @@
   <button ion-button (click)="navigateForm()" >
     Navegate Form
   </button>
+  <button ion-button (click)="presentActionSheet()" >
+    Presentar ActionSheet
+  </button>
 </ion-content>
