manejo de cordova: datos del dispositivo y geolocalización

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,18 +14,24 @@
     Navigate About Page
   </button>
   <button ion-button (click)="navigateListado()" >
-    Navigate Listado Page
+    Navigar Listado Page
   </button>
   <button ion-button (click)="presentModal()" >
     Present Modal
   </button>
   <button ion-button (click)="navigateInfinite()" >
-    Navegate Infinite
+    Navegar Infinite
   </button>
   <button ion-button (click)="navigateForm()" >
-    Navegate Form
+    Navegar Form
   </button>
   <button ion-button (click)="presentActionSheet()" >
     Presentar ActionSheet
+  </button>
+  <button ion-button (click)="navigateDevice()" >
+    Navegar Device (Cordova)
+  </button>
+  <button ion-button (click)="navigateGeo()" >
+    Navegar Geo (Cordova)
   </button>
 </ion-content>
