manejo de grid en una página

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -25,11 +25,17 @@
   <button ion-button (click)="navigateForm()" >
     Navegar Form
   </button>
+  <button ion-button (click)="navigateGrid()" >
+    Navegar Grid
+  </button>
   <button ion-button (click)="presentActionSheet()" >
     Presentar ActionSheet
   </button>
   <button ion-button (click)="navigateDevice()" >
     Navegar Device (Cordova)
+  </button>
+  <button ion-button (click)="navigateCamera()" >
+    Navegar Camara (Cordova)
   </button>
   <button ion-button (click)="navigateGeo()" >
     Navegar Geo (Cordova)
